--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,289 @@
-aiohttp==3.4.3
-alembic==0.9.9
+absl-py==0.5.0
+aiohttp==3.4.4
+alabaster==0.7.10
+anaconda-client==1.6.14
+anaconda-navigator==1.8.7
+anaconda-project==0.8.2
 appdirs==1.4.3
+appnope==0.1.0
+appscript==1.0.1
 asn1crypto==0.24.0
-async-generator==1.10
+astor==0.7.1
+astroid==1.6.3
+astropy==3.0.2
 async-timeout==3.0.0
+asyncio==3.4.3
 attrs==18.1.0
-Automat==0.0.0
+Automat==0.7.0
+Babel==2.5.3
 backcall==0.1.0
+backports.shutil-get-terminal-size==1.0.0
+basemap==1.1.0
 beautifulsoup4==4.6.0
-bleach==2.1.4
-bokeh==0.12.16
+bitarray==0.8.1
+bkcharts==0.2
+blaze==0.11.3
+bleach==2.1.3
+bokeh==0.13.0
+boto==2.48.0
+boto3==1.7.80
+botocore==1.10.80
+Bottleneck==1.2.1
+branca==0.3.0
+cachetools==2.1.0
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
+cld2-cffi==0.1.4
+click==6.7
 cloudpickle==0.5.3
-conda==4.5.8
+clyent==1.2.2
+colorama==0.3.9
+conda==4.5.11
+conda-build==3.10.5
+conda-verify==2.0.0
 constantly==15.1.0
-cryptography==2.2.1
+contextlib2==0.5.5
+cryptography==2.2.2
+cssselect==1.0.3
 cycler==0.10.0
-Cython==0.28.5
-dask==0.18.2
+cymem==1.31.2
+Cython==0.28.2
+cytoolz==0.9.0.1
+dask==0.17.5
+datashape==0.5.4
 decorator==4.3.0
 dill==0.2.8.2
+distributed==1.21.8
+docutils==0.14
+en-core-web-sm==2.0.0
 entrypoints==0.2.3
+et-xmlfile==1.0.1
 fastcache==1.0.2
+featuretools==0.2.2
+filelock==3.0.4
+Flask==1.0.2
+Flask-Cors==3.0.4
+folium==0.6.0
+ftfy==4.4.2
+future==0.16.0
+gast==0.2.0
+gevent==1.3.0
+glob2==0.6
 gmpy2==2.0.8
+greenlet==0.4.13
+grpcio==1.14.1
 h5py==2.7.1
+heapdict==1.0.0
 html5lib==1.0.1
 hyperlink==17.3.1
 idna==2.5
-idna-ssl==1.0.0
+idna-ssl==1.1.0
+ijson==2.3
 imageio==2.3.0
+imagesize==1.0.0
 incremental==17.5.0
+intel-openmp==2019.0
 ipykernel==4.8.2
-ipython==6.5.0
+ipython==7.0.1
 ipython-genutils==0.2.0
-ipywidgets==7.2.1
-jedi==0.12.1
+ipywidgets==7.4.2
+isort==4.3.4
+itsdangerous==0.24
+jdcal==1.4
+jedi==0.12.0
 Jinja2==2.10
+jmespath==0.9.3
+joblib==0.12.5
 jsonschema==2.6.0
+jupyter==1.0.0
 jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.0
 jupyter-core==4.4.0
-jupyterhub==0.9.2
-jupyterlab==0.34.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.4
+jupyter-nbextensions-configurator==0.4.0
+jupyterlab==0.34.12
 jupyterlab-launcher==0.13.1
+Keras==2.2.2
+Keras-Applications==1.0.4
+Keras-Preprocessing==1.0.2
 kiwisolver==1.0.1
-llvmlite==0.23.0
+lazy-object-proxy==1.3.1
+llvmlite==0.23.1
+locket==0.2.0
+lxml==4.2.1
 lyricsgenius==0.9.5
 Mako==1.0.7
+Markdown==2.6.11
 MarkupSafe==1.0
-matplotlib==2.2.3
+matplotlib==3.0.0
+mccabe==0.6.1
+missingno==0.4.1
 mistune==0.8.3
+mkl==2019.0
+mkl-fft==1.0.0
+mkl-random==1.0.1
+more-itertools==4.1.0
+mpmath==1.0.0
+msgpack-numpy==0.4.3.1
+msgpack-python==0.5.6
 multidict==4.4.2
+multipledispatch==0.5.0
+murmurhash==0.28.0
+musicbrainzngs==0.6
+navigator-updater==0.2.1
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.1
+nltk==3.3
+nose==1.3.7
 notebook==5.6.0
-numba==0.38.1
+numba==0.38.0
 numexpr==2.6.6
-numpy==1.13.3
+numpy==1.14.6
+numpydoc==0.8.0
+odo==0.5.1
 olefile==0.45.1
+openpyxl==2.5.3
 packaging==17.1
-pamela==0.3.0
+palettable==3.1.1
 pandas==0.23.4
+pandas-datareader==0.6.0
 pandocfilters==1.4.2
-parso==0.3.1
+parsel==1.5.0
+parso==0.2.0
+partd==0.3.8
+path.py==11.0.1
+pathlib2==2.3.2
 patsy==0.5.0
-pexpect==4.6.0
+pep8==1.7.1
+pexpect==4.5.0
 pickleshare==0.7.4
-Pillow==5.2.0
+Pillow==5.1.0
+pkginfo==1.4.2
+plac==0.9.6
+plotly==3.1.0
+pluggy==0.6.0
+ply==3.11
+preshed==1.0.1
 prometheus-client==0.3.0
-prompt-toolkit==1.0.15
+prompt-toolkit==2.0.4
 protobuf==3.6.0
+psutil==5.4.5
 psycopg2==2.7.5
-psycopg2-binary==2.7.5
-ptyprocess==0.6.0
+ptyprocess==0.5.2
+py==1.5.3
 pyasn1==0.4.4
 pyasn1-modules==0.2.1
+pycodestyle==2.4.0
 pycosat==0.6.3
 pycparser==2.18
-pycurl==7.43.0.2
+pycrypto==2.6.1
+pycurl==7.43.0.1
+PyDispatcher==2.0.5
+pydot2==1.0.33
+pydotplus==2.0.2
+pyemd==0.5.1
+pyflakes==1.6.0
 Pygments==2.2.0
+pygpu==0.7.6
+PyHamcrest==1.9.0
+pylint==1.8.4
+pymc3==3.5
+Pympler==0.5
+pynverse==0.1.4.4
+pyodbc==4.0.23
 pyOpenSSL==18.0.0
 pyparsing==2.2.0
+Pyphen==0.9.4
+pyproj==1.9.5.1
+PySAL==1.14.4.post2
+pyshp==1.2.12
 PySocks==1.6.8
+pytest==3.5.1
+pytest-arraydiff==0.2
+pytest-astropy==0.3.0
+pytest-doctestplus==0.1.3
+pytest-openfiles==0.3.0
+pytest-remotedata==0.2.1
+pytest-runner==4.2
 python-dateutil==2.7.3
-python-editor==1.0.3
-python-oauth2==1.0.1
-pytz==2018.5
+python-Levenshtein==0.12.0
+pytz==2018.4
 PyWavelets==0.5.2
 PyYAML==3.12
-pyzmq==17.1.2
+pyzmq==17.0.0
+QtAwesome==0.4.4
+qtconsole==4.3.1
+QtPy==1.4.1
+queuelib==1.5.0
+regex==2017.11.9
 requests==2.18.1
-ruamel-yaml==0.15.44
-scikit-image==0.14.0
-scikit-learn==0.19.2
+requests-file==1.4.3
+requests-ftp==0.3.1
+retrying==1.3.3
+rope==0.10.7
+ruamel-yaml==0.15.35
+s3fs==0.1.6
+s3transfer==0.1.13
+scikit-image==0.13.1
+scikit-learn==0.20.0
 scipy==1.1.0
+Scrapy==1.5.1
 seaborn==0.9.0
+selenium==3.14.0
 Send2Trash==1.5.0
 service-identity==17.0.0
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.11.0
+sklearn==0.0
+snowballstemmer==1.2.1
+sortedcollections==0.6.1
+sortedcontainers==1.5.10
+spacy==2.0.12
+Sphinx==1.7.4
+sphinxcontrib-websupport==1.0.1
+splinter==0.9.0
 spotipy==2.4.4
-spotlight==0.1.5
-SQLAlchemy==1.2.11
+spyder==3.2.8
+SQLAlchemy==1.2.7
 statsmodels==0.9.0
 sympy==1.1.1
+tables==3.4.3
+tblib==1.3.2
+tensorboard==1.10.0
+tensorflow==1.10.0
+termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
+textacy==0.6.2
+Theano==1.0.3
+thinc==6.10.3
 toolz==0.9.0
-torch==0.4.0
-tornado==5.1
+tornado==5.0.2
+tqdm==4.24.0
 traitlets==4.3.2
+treeinterpreter==0.2.1
 Twisted==18.7.0
+typing==3.6.4
+ujson==1.35
+unicodecsv==0.14.1
+Unidecode==1.0.22
 urllib3==1.21.1
-vincent==0.4.4
+w3lib==1.19.0
 wcwidth==0.1.7
-webencodings==0.5
-widgetsnbextension==3.2.1
+webencodings==0.5.1
+Werkzeug==0.14.1
+widgetsnbextension==3.4.2
+wrapt==1.10.11
 xlrd==1.1.0
+XlsxWriter==1.0.4
+xlwings==0.11.8
+xlwt==1.2.0
 yarl==1.2.6
+zict==0.1.3
 zope.interface==4.5.0
