--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ song_details*.json
 genius_song_details*.json
 data/genre_dummies.csv
 data/svd_df.csv
+data/ascap_songs/
+data/*.xlsx
 
 # big interim files / pickles
 pickle/cos_sim_mat_g.npy
