--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,9 @@ __pycache__*
 genius_song_ids.json
 genius_song_ids*.json
 song_analysis.json
-data/audio_analysis/
+data/
 song_details*.json
 genius_song_details*.json
-data/genre_dummies.csv
-data/svd_df.csv
-data/ascap_songs/
-data/*.xlsx
-data/bash_history.txt
 
 # big interim files / pickles
 pickle/cos_sim_mat_g.npy
