--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==0.23.4
-splinter==0.9.0
-dask==1.2.0
+dask
+numpy
+boto3==1.9.215
+dask_ml==1.0.0
+pandas==0.25.1
+selenium==3.141.0
+scikit_learn==0.21.3
+splinter==0.11.0
 spotipy==2.4.4
-numba==0.38.0
-numpy==1.14.6
-selenium==3.14.0
-dask_ml==0.12.0
