--- a/songwriter_graph/config.json
+++ b/songwriter_graph/config.json
@@ -1,9 +1,3 @@
 {
-    "SQLALCHEMY_DATABASE_URI": {
-        "drivername": "postgresql+psycopg2",
-        "username": "postgres",
-        "password": "",
-        "host": "localhost",
-        "port": 5432,
-        "database": "postgres"}
+    "SQLALCHEMY_DATABASE_URI": "postgresql+psycopg2://postgres:password@localhost:5432/postgres"
 }
